# SiliconSurfer

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_CN.md  TODO.md  config.example.toml  mcp_server.py  profiles.toml  pyproject.toml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/benches/: distiller_bench.rs
crates/core/src/: browser.rs  cdp.rs  distiller.rs  distiller_fast.rs  extract.rs  fetcher.rs  lib.rs  probe.rs  profiles.rs  router.rs  session.rs
crates/core/src/strategy/: data.rs  developer.rs  mod.rs  operator.rs  reader.rs  spider.rs
crates/core/tests/: integration_tests.rs
crates/python/: Cargo.toml  pyproject.toml
crates/python/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: 01_benchmark_t0_vs_t1_vs_playwright.md  02_baseline_distiller_vs_readability.md  03_benchmark_lol_html.md  04_regression_test_after_lol_html.md  05_architecture_scenarios.md  06_benchmark_pyo3_direct_vs_playwright.md  07_distiller_quality_evaluation.md  08_eval_guidelines.md  09_benchmark_criterion_and_eval.md  10_multimode_vision_architecture.md  11_eval_metrics_spec.md  12_architecture_fixes.md  13_production_bugs.md  14_deployment_architecture.md  SUMMARY.md
docs/benchmarks/: v0_2026-04-09_baseline.md  v10_2026-04-09_final_e2e_5_of_5.md  v11_2026-04-09_mcp_launch_and_profiles.md  v12_2026-04-09_slickdeals_real_world.md  v13_2026-04-09_production_hardening.md  v14_2026-04-09_ship_it.md  v1_2026-04-09_fix_lol_html_On2_264ms_to_7ms.md  v2_2026-04-09_llm_judge_eval.md  v3_2026-04-09_multimode_and_relative_links.md  v4_2026-04-09_fix_eval_bias_and_llm_friendly.md  v5_2026-04-09_operator_mode_beats_playwright.md  v6_2026-04-09_strategy_refactor_all_modes.md  v7_2026-04-09_comprehensive_30test_all_modes.md  v8_2026-04-09_vs_competitors_30test.md  v9_2026-04-09_vs_browser_use_e2e.md
eval/: collect_operator_samples.py  collect_samples.py  e2e_browser_use.py  e2e_vs_competitors.py  heuristic_eval.py  llm_judge.py  llm_judge_comprehensive.py  llm_judge_operator.py  llm_judge_vs_competitors.py
eval/samples/: agent_loop_results.json  competitors_results.json  comprehensive_results.json  e2e_competitors.json  e2e_vs_browseruse.json  eval_results.json  (+3 more)
examples/: agent_e2e.py  agent_loop.py
profiles/: cnbc.toml  csdn.toml  eastmoney.toml  github.toml  hacker_news.toml  juejin.toml  medium.toml  sina_finance.toml  stackoverflow.toml  tencent_cloud.toml  wikipedia.toml  xueqiu.toml  zhihu.toml
python/: bench.py  bench_all.py  bench_baseline.py  bench_final.py  bench_probe_vs_pw.py  bench_t0_vs_t1.py  bench_t1_vs_pw.py  compare_content.py  demo_hn.py
tests/: test_agent_api.py  test_mcp_server.py  test_probe.py
(+63 files in other folders)
