[workspace]
members = ["crates/core", "crates/python", "crates/server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate"] }
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
toml = "0.8"
chromiumoxide = "0.9"
lol_html = "2.7"
