[package]
name = "agent-browser-python"
version.workspace = true
edition.workspace = true

[lib]
name = "agent_browser"
crate-type = ["cdylib"]

[dependencies]
agent-browser-core = { path = "../core" }
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio.workspace = true
futures.workspace = true
serde_json.workspace = true
