[package]
name = "agent-browser-server"
version.workspace = true
edition.workspace = true

[dependencies]
agent-browser-core = { path = "../core" }
reqwest.workspace = true
axum = "0.8"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
